ags (3.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_notation_to_raw_midi()
	* implemented ags_notation_from_raw_midi()
	* fixed typo in AgsRecall:automation-port property
	* fixed libags.pc old include of ags/config.h
	* fixed libags_audio.pc missing gstreamer dependencies

ags (3.7.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsServer missing HTTP status code 403 Forbidden and response

ags (3.7.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented vector operations on Apple macOS with Accelerate Framework

ags (3.7.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed use %lf instead of %Lf with string functions affecting envelope restore
	* fixed use %lf instead of %f with string functions
	* added ags_complex_test_serialize()

ags (3.7.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed complex type to double _Complex in many files

ags (3.7.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed functional test util gsequencer_setup_util.c mutex lock/unlock wrong pointer type
	* minor improvements

ags (3.7.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved thread-safety of pulseaudio
	* fixed soundcard won't stop playback after unlink running machine
	* fixed wrong mutex lock count in ags_pulse_port_cached_stream_request_callback()

ags (3.7.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken if statement with string corruption of fixup 3.2.7 in ags_simple_file.c
	* updated developer's manual complete example listing and chap12.xml

ags (3.7.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed deprecated code to restore plugins in ags_simple_file.c
	* fixed wrong type cast with interface in ags_xorg_application_context.c

ags (3.7.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]