@@ -864,7 +864,7 @@ ags_notation_test_from_raw_midi()
   glong nn, dd, cc, bb;
   guint buffer_length;
   
-  static const guchar buffer[] = "MThd\x00\x00\x00\x00\x00\x01\x00\x01\x00\x60MTrk\x00\x00\x00\x0\x00\xff\x58\x04\x06\x03\x24\x08\x00\x90\x36\x7f\x00\x90\x36\x7f\x60\x90\x36\x7f\x81\x40\x90\x36\x7f\x82\x20\x90\x36\x7f\x83\x00\xff\x2f\x00";
+  static const guchar buffer[] = "MThd\x00\x00\x00\x00\x00\x01\x00\x01\x00\x60MTrk\x00\x00\x00\x00\x00\xff\x58\x04\x06\x03\x24\x08\x00\x90\x36\x7f\x00\x90\x36\x7f\x60\x90\x36\x7f\x81\x40\x90\x36\x7f\x83\x00\xff\x2f\x00";
 
   tempo = 0x07A120;
 
