@@ -40,6 +40,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.7.38" date="2021-02-16">
+      <description>
+	<p>Minor improvements.</p>
+      </description>
+    </release>
+
     <release version="3.7.37" date="2021-02-13">
       <description>
 	<p>Fixed AgsServer missing 403 Forbidden response.</p>
